layout issue  fixed

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ a {
 .container {
     display: grid;
     grid-template: 
-    "left-bar       main       right-bar" 1fr/
+    "left-bar       main       right-bar" 100vh/
     20fr            55fr       25fr;
     /* gap: 1rem; */
     /* border: 2px dotted blue; */
@@ -102,14 +102,13 @@ a {
     /* padding: 1rem; */
     display: grid;
     grid-auto-flow: row;
-    align-content: flex-start;
-    row-gap: 2rem;
-}
+    align-content: space-between;
+}  
 
 
 .logo-container {
-    height: 4rem;
-    width: 4rem;
+    height: 3.5rem;
+    width: 3.5rem;
     /* border: 2px dotted green; */
     display: grid;
     align-items: center;
@@ -163,7 +162,6 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 1rem;
 }
 
 .profile-info {
@@ -272,6 +270,7 @@ a {
     grid-area: main;
     margin-right: 1rem;
     /* border: 2px dotted darkgreen; */
+    overflow-y: scroll;
 }
 
 .main-header {
